# basketball-stats

./: Makefile  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: cache.py  main.py
backend/app/models/: player.py
backend/app/routers/: awards.py  bio.py  career.py  gamelog.py  leaders.py  lineups.py  percentiles.py  players.py  shots.py  stats.py  zones.py
backend/app/services/: nba.py
frontend/: Dockerfile  package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/leaders/: page.tsx
frontend/app/lineups/: page.tsx
frontend/components/: GameLog.tsx  Header.tsx  PercentileRankings.tsx  PlayerBioCard.tsx  PlayerSearch.tsx  PlayoffRun.tsx  ShotChart.tsx  StatsGrid.tsx
frontend/lib/: api.ts  statDescriptions.ts
